--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,10 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - href: source-1.qmd
+        text: Source 1
+      - href: source-2.qmd
+        text: Source 2
       - about.qmd
 
 format:
